--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,6 @@ jobs:
     # Environment values for all container
     environment:
       - GO111MODULE: "on"
-      - AWS_REGION: "ap-northeast-1"
-      - DYNAMODB_ENDPOINT: "http://localhost:8000"
-      - DYNAMO_TABLE_USER: "local_user"
     steps:
       - checkout
       - run:
@@ -39,6 +36,11 @@ jobs:
       - run:
           name: Run all unit tests
           command: |
+            export AWS_REGION=ap-northeast-1
+            export AWS_ACCESS_KEY_ID=dummy
+            export AWS_SECRET_ACCESS_KEY=dummy
+            export DYNAMO_ENDPOINT=http://localhost:8000
+            export DYNAMO_TABLE_USER=local_user
             make test
 
 workflows:
