--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     # Environment values for all container
     environment:
       - GO111MODULE: "on"
+        REVIEWDOG_GITHUB_API_TOKEN:
     steps:
       - checkout
       - run:
@@ -20,6 +21,17 @@ jobs:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
+      - run:
+          name: Install GolangCI-Lint
+          command: curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.27.0
+      - run:
+          command: |
+            go get -u golang.org/x/lint/golint
+          name: Install Golint
+      - run:
+          command: |
+            go get -u github.com/reviewdog/reviewdog/cmd/reviewdog
+          name: Install reviewdog
       - run:
           name: Fetch dependencies
           command: go mod download
@@ -42,6 +54,15 @@ jobs:
             export DYNAMO_ENDPOINT=http://localhost:8000
             export DYNAMO_TABLE_USER=local_user
             make test
+      - run:
+          name: Execute reviewdog
+          command: |
+            if [ -n "$CI_PULL_REQUEST" ]; then
+              golint $(go list ./...) | reviewdog -name=golint -reporter='github-pr-review'
+              golangci-lint run --out-format checkstyle | reviewdog -name=golangci-lint -f=checkstyle -reporter='github-pr-review'
+            fi
+          environment:
+              REVIEWDOG_GITHUB_API_TOKEN: $REVIEWDOG_GITHUB_API_TOKEN
 
 workflows:
   version: 2
